<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">/</string>
    <string name="mod">%</string>
    <string name="equals">=</string>
    <string name="backspace">←</string>
    <string name="all_clear">C</string>
    <string name="dec">.</string>
    <string name="par">( )</string>
    <string name="input">Enter a value</string>

</resources>